<?xml version="1.0" encoding="utf-8"?>
<!--
*
* Copyright (C) 2013 www.yaacc.de
*
* This program is free software; you can redistribute it and/or
* modify it under the terms of the GNU General Public License
* as published by the Free Software Foundation; either version 3
* of the License, or (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program; if not, write to the Free Software
* Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
-->
<resources>
    <string name="app_name">YAACC</string>
    <string name="menu_settings">Settings</string>
    <string name="browse_main_folder">Browse main folder</string>
    <string name="browse_context_title">Available actions</string>
    <string name="browse_context_play">Play item</string>
    <string name="browse_context_download">Download item</string>
    <string name="browse_context_add_to_playplist">Add item to playlist</string>
    <string name="browse_no_content_found">No data found</string>
    <string name="browse_button_devices">Sender Devices</string>
    <string name="browse_button_prev">Previous Item</string>
    <string name="browse_button_stop">Stop Playback</string>
    <string name="browse_button_next">Next Item</string>
    <string name="title_activity_main">YAACC</string>
    <string name="title_activity_upnp_browser">UpnpBrowserActivity</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_image_viewer_settings">Settings for image viewer</string>
    <string name="title_activity_generic_browse">GenericBrowseActivity</string>
    <string name="error_upnp_generic">An unknown error happened while browsing</string>
    <string name="error_upnp_specific">The following error occurred:</string>
    <string name="error_no_receiver_device_found">No receiver device found</string>
    <string name="error_no_activity_found">No activity found for playing mimetype \'%1$s\'</string>
    <string name="image_viewer_settings_duration">picture stay duration</string>
    <string name="image_viewer_settings_duration_key" translatable="false">image_viewer_settings_duration_key</string>
    <string name="yaacc_menu_settings">YAACC settings</string>
    <string name="yaacc_about">About</string>
    <string name="no_valid_uri_data_found_to_display">No valid uri data found to display</string>
    <string name="play">play</string>
    <string name="stop">stop</string>
    <string name="pause">pause</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="exit">exit</string>
    <string name="title_activity_music_player">Yaacc Music player</string>
    <string name="musicActivityImageView">Cover</string>
    <string name="avtransportPlayerActivityImageView">Device</string>
    <string name="playerNameMusic">music</string>
    <string name="playerNameImage">image</string>
    <string name="playerNameMultiContent">multi</string>
    <string name="playerNameAvTransport">remote</string>
    <string name="multiContentPlayerActivityImageView">multi content</string>
    <string name="title_activity_avtransport_player">Yaacc Remote player</string>
    <string name="title_activity_multi_content_player">Yaacc Default player</string>
    <string name="can_not_start_activity">"Can not start app! Reason: "</string>
    <string name="app_descrip">Bring your UPnP devices in your local network together with android!\n <a href="http://www.yaacc.de">www.yaacc.de</a>\n\nYAACC is developed under GPLv3. Feel free to use and share it without any warranty. Licence details are documented at <a href="http://www.gnu.org/licenses/gpl-3.0">GPLv3</a> (www.gnu.org/licenses/gpl-3.0)\n\nFurther licences are:\nThe UPNP implementation is based on <a href="http://4thline.org/projects/cling">Cling</a> (4thline.org/projects/cling)\nIcons are used came from <a href="http://www.carpicon.com">black + white icons 2.0</a> (www.carpicon.com) and <a href="http://developer.android.com/about/index.html">Android</a> itself. Android is a trademark of Google Inc (developer.android.com/about/index.html )</string>
    <string name="title_activity_yaacc_upnp_server_control">Yaacc Upnp server control</string>
    <string name="yaacc_upnp_server_stop_server">stop server</string>
    <string name="yaacc_upnp_server_start_server">start server</string>
    <string name="playerCurrentItem">currentItem</string>
    <string name="musicActivityNextLabel">"Next: "</string>
    <string name="playerNextItem">nextItem</string>
    <string name="playerPosition">Position</string>
    <string name="playerTiming">Timing: </string>
    <string name="playerTimeDuration">Duration</string>
    <string name="playerTimeSeparator"> / </string>
    <string name="playerTimeElapsed">Elapsed</string>
    <string name="bucket_names">Galleries</string>
    <string name="all_images">All images</string>
    <string name="images">Images</string>
    <string name="albums">Albums</string>
    <string name="all">All</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="videos">Videos</string>
    <string name="music">Music</string>
    <string name="title_activity_yaacc_log">View log</string>
    <string name="logContent">Content of system log should be shown here</string>
    <string name="activity_remote_player_mute">Mute</string>
    <string name="activity_remote_player_volume">Volume</string>
    <string name="title_activity_server_list">Server</string>
    <string name="title_activity_content_list">Content</string>
    <string name="title_activity_receiver_list">Receiver</string>
    <string name="title_activity_player_list">Player</string>
    <string name="browse_context_play_all">Play all items</string>
    <string name="open">open</string>
    <string name="exitActivity">stop</string>
    <string name="icon">icon</string>
    <string name="not_yet_implemented">not yet implemented</string>


</resources>