<?xml version="1.0" encoding="utf-8"?>
<!-- 
 *
 * Copyright (C) 2013 www.yaacc.de 
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 3
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AVTransportPlayerActivity" >

     <RelativeLayout
         android:id="@+id/avtransportPlayerActivityControls"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:orientation="horizontal" >

         <ImageButton
             android:id="@+id/avtransportPlayerActivityControlPrev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:contentDescription="@string/previous"
             android:src="@drawable/player_start" />

         <ImageButton
             android:id="@+id/avtransportPlayerActivityControlPlay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/avtransportPlayerActivityControlPrev"
             android:layout_toRightOf="@+id/avtransportPlayerActivityControlPrev"
             android:contentDescription="@string/play"
             android:src="@drawable/player_play" />

         <ImageButton
             android:id="@+id/avtransportPlayerActivityControlPause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/avtransportPlayerActivityControlPlay"
             android:layout_toRightOf="@+id/avtransportPlayerActivityControlPlay"
             android:contentDescription="@string/pause"
             android:src="@drawable/player_pause" />

         <ImageButton
             android:id="@+id/avtransportPlayerActivityControlStop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_toEndOf="@+id/avtransportPlayerActivityControlPause"
             android:layout_toRightOf="@+id/avtransportPlayerActivityControlPause"
             android:contentDescription="@string/stop"
             android:src="@drawable/player_stop" />

         <ImageButton
             android:id="@+id/avtransportPlayerActivityControlNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/avtransportPlayerActivityControlStop"
             android:layout_toRightOf="@+id/avtransportPlayerActivityControlStop"
             android:contentDescription="@string/next"
             android:src="@drawable/player_end" />
          <ImageButton
             android:id="@+id/avtransportPlayerActivityControlExit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/avtransportPlayerActivityControlNext"
             android:layout_toRightOf="@+id/avtransportPlayerActivityControlNext"
             android:contentDescription="@string/exit"
             android:src="@drawable/button_cancel" />
     </RelativeLayout>

     <ImageView
         android:id="@+id/avtransportPlayerActivityImageView"
         android:contentDescription="@string/avtransportPlayerActivityImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/avtransportPlayerActivityElapsedTime"
         android:layout_below="@+id/avtransportPlayerActivityControlVolumeSeekBar"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:src="@drawable/device" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/avtransportPlayerActivityControlMuteSwitch"
        android:layout_alignParentTop="true"
        android:text="@string/activity_remote_player_mute" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/activity_remote_player_volume"
        android:layout_below="@+id/avtransportPlayerActivityControlMuteSwitch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/avtransportPlayerActivityControlVolumeTextView"
        android:labelFor="@+id/avtransportPlayerActivityControlVolumeSeekBar"
        />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avtransportPlayerActivityControlMuteSwitch"
        android:id="@+id/avtransportPlayerActivityControlVolumeSeekBar"
        android:layout_toEndOf="@+id/avtransportPlayerActivityControlVolumeTextView"
        android:layout_toRightOf="@+id/avtransportPlayerActivityControlVolumeTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:id="@+id/avtransportPlayerActivityElapsedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/avtransportPlayerActivityControlSeekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/playerTimeElapsed"/>
    <TextView
        android:id="@+id/avtransportPlayerActivityDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/avtransportPlayerActivityControlSeekBar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/playerTimeDuration"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/avtransportPlayerActivityControlSeekBar"
        android:layout_above="@+id/avtransportPlayerActivityControls"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />


</RelativeLayout>